<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/black">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/white"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_habit"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Tên thói quen -->
    <EditText
        android:id="@+id/et_habit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:background="@drawable/border_custom3"
        android:padding="14dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:inputType="textCapSentences"/>

    <!-- Tiêu đề quote -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_quote"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp" />

    <!-- Nội dung quote -->
    <EditText
        android:id="@+id/et_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_quote"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:background="@drawable/border_custom3"
        android:padding="14dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:inputType="textCapSentences"/>

    <!-- Nút next -->
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_next_aim_habit"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:padding="14dp"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_quadrant_background"/>

</LinearLayout>
