<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&lt;"
            android:textColor="#CCE9E9E8"
            android:textSize="35sp"
            android:paddingBottom="3dp"
            android:paddingHorizontal="10dp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus_white_noise"
            android:textColor="#CCE9E9E8"
            android:textSize="30sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/noneSound"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/no_music_icon" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/focus_none"
                android:textColor="#CCE9E9E8"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/clockSound"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/clock_icon" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/focus_clock"
                android:textColor="#CCE9E9E8"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/rainSound"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/rain_icon" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/focus_rain"
                android:textColor="#CCE9E9E8"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>